Fix code tag style at dark mode

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -121,7 +121,8 @@ blockquote {
   @apply bg-gray-100 dark:border-blue-400 dark:bg-warmGray-700 duration-300;
 }
 
-pre {
+pre code,
+code {
   @apply dark:bg-warmGray-900 duration-300;
 }
 
